libs/apps: add qlog support
This change introduces qlog support into the quiche library as a new optional
feature that is disabled by default. qlog occurs in addition to conventional
Rust logging.

To build quiche with qlog support do:

cargo build --features qlog

Rust applications can enable qlog on a per-connection basis via the `set_qlog()`
 method. C applications can use `quiche_conn_set_qlog_fd()`.

Once qlog is enabled, qlog events are seralized in a streaming fashion to the
target Write trait or file descriptor.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ libc = "0.2"
 ring = "0.16"
 criterion = { version = "0.3", optional = true }
 lazy_static = "1"
+qlog = { version = "0.2", optional = true }
 
 [target."cfg(windows)".dependencies]
 winapi = { version = "0.3", features = ["wincrypt"] }
