--- a/tools/apps/Cargo.toml
+++ b/tools/apps/Cargo.toml
@@ -9,6 +9,9 @@ publish = false
 # Enable quiche's fuzzing mode.
 fuzzing = ["quiche/fuzzing"]
 
+# Enable qlog support.
+qlog = ["quiche/qlog"]
+
 [dependencies]
 docopt = "1"
 env_logger = "0.6"
@@ -16,8 +19,7 @@ mio = "0.6"
 url = "1"
 log = "0.4"
 ring = "0.16"
-quiche = { path = "../../", features=["qlog"] }
-qlog = { version = "0.2", optional = true }
+quiche = { path = "../../" }
 
 [profile.release]
 debug = true
